--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@
     width: 100px;
     position: absolute;
     top: 0;
-    bottom: 85;
+    bottom: 185px;
     left: 0;
     right: 750px;
     margin: auto;
