--- a/style.css
+++ b/style.css
@@ -209,8 +209,8 @@
 .nenglizhi{
     width: 100px;
     position: absolute;
-    top: 0;
-    bottom: 585px;
+    top: 85;
+    bottom: 0;
     left: 0;
     right: 750px;
     margin: auto;
