--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@
 .nenglizhi{
     width: 100px;
     position: absolute;
-    top: 185;
+    top: 585px;
     bottom: 0;
     left: 0;
     right: 750px;
