--- a/mystyle.css
+++ b/mystyle.css
@@ -209,8 +209,8 @@
 .nenglizhi{
     width: 100px;
     position: absolute;
-    top: 0;
-    bottom: 85;
+    top: 200;
+    bottom: ;
     left: 0;
     right: 750px;
     margin: auto;
